--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         }
         
 
-.imgBox{
-    background-image: url('try1.png');
+        .imgBox {
+    background-image: url(try1.png);
     position: relative;
-    top: 7px;
-    left: 5px;
+    left: 1px;
+    top: 2px;
     height: 145px;
     width: 145px;
     cursor: pointer;
