--- a/try9.html
+++ b/try9.html
@@ -95,8 +95,11 @@
             }
         })
     </script>
+	<!--get jquery-3.2.1.min.js-->
     <script src="js/jquery-3.2.1.min.js"></script>
+	<!--get jquery-ui.js-->
     <script src="js/jquery-ui.js"></script>
+	<!--get script.js-->
     <script src="js/script.js"></script>
 </body>
 
